Add entries/bug fixes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <span>Nath</span>
           </div>
           <div class="number" style="--i: 19; --clr: #7f7679">
-            <span>Pollaka</span>
+            <span>Polaka</span>
           </div>
           <div class="number" style="--i: 20; --clr: #3d642d">
             <span>Michele</span>
@@ -93,8 +93,8 @@
           <div class="number" style="--i: 27; --clr: #af2b1e">
             <span>Sandra</span>
           </div>
-          <div class="number" style="--i: 28; --clr: #1e213d">
-            <span>Janaina</span>
+          <div class="number" style="--i: 28; --clr: #de4c8a">
+            <span>Janaína</span>
           </div>
           <div class="number" style="--i: 29; --clr: #dc9d00">
             <span>Karine</span>
@@ -114,10 +114,19 @@
           <div class="number" style="--i: 34; --clr: #e55137">
             <span>Valdirene</span>
           </div>
+          <div class="number" style="--i: 35; --clr: #9da1aa">
+            <span>Larissa</span>
+          </div>
+          <div class="number" style="--i: 36; --clr: #9b111e">
+            <span>Flavia</span>
+          </div>
+          <div class="number" style="--i: 37; --clr: #1e5945">
+            <span>Andréa M</span>
+          </div>
         </div>
       </div>
     </div>
-    <p>teste</p>
+    <p></p>
   </body>
   <script src="js/script.js"></script>
 </html>
